# educational_platform

./: .env.example  Dockerfile  README.md  docker-compose.yml  dump.rdb  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
materials/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_owner_lesson_owner.py  0004_subscription.py  0005_course_last_update.py
nginx/: Dockerfile  nginx.conf
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: add_payment.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_user.py  0004_payment_link_payment_session_id.py
